Added paypal to community page

--- a/community.html
+++ b/community.html
@@ -125,7 +125,7 @@
                         <ul>
                           <li>We accept sponsorships as well as individual donations</li>
                           <li>For sponsorship opportunities, please contact <a href="mailto:info@openscad.org">info@openscad.org</a></li>
-                          <li>For donations, we have a <a href="http://flattr.com/thing/121566/OpenSCAD-The-Programmers-Solid-3D-CAD-Modeller">Flattr account</a> and a Bitcoin address: 18Eakg4ZCjjfVajXGvyntLKsEJYvZuT49C</li>
+                          <li>For donations, we have a <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=7ZQNEVE87X2KN">PayPal account</a>, a <a href="http://flattr.com/thing/121566/OpenSCAD-The-Programmers-Solid-3D-CAD-Modeller">Flattr account</a> and a Bitcoin address: 18Eakg4ZCjjfVajXGvyntLKsEJYvZuT49C</li>
                           <li>It's also possible to place bounties on individual issues using <a href="https://www.bountysource.com/#trackers/52063-openscad">BountySource</a></li>
                           <li>..or show your appreciation by <a href="http://www.amazon.ca/registry/wishlist/2N4WTGGFKT3IS">buying me a gift</a></li>
                         </ul>
