Minor clarification of operators

--- a/cheatsheet/index.html
+++ b/cheatsheet/index.html
@@ -88,9 +88,9 @@
 					<dt><code><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Modifier_Characters#Root_Modifier">!</a></code></dt>
 					<dd>show only</dd>
 					<dt><code><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Modifier_Characters#Debug_Modifier">#</a></code></dt>
-					<dd>highlight</dd>
+					<dd>highlight / debug</dd>
 					<dt><code><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Modifier_Characters#Background_Modifier">%</a></code></dt>
-					<dd>transparent</dd>
+					<dd>transparent / background</dd>
 				</dl>
 			</article>
 		</section>
