Updated manual links

--- a/cheatsheet/index.html
+++ b/cheatsheet/index.html
@@ -32,9 +32,9 @@
 			<article>
 				<h2>Syntax</h2>
 				<code><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/General#Variables">var</a> = <a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/General#Values_and_Data_Types">value</a>;</code>
-				<code><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Modules">module</a> name(&hellip;) { &hellip; }<br/>
+				<code><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/User-Defined_Functions_and_Modules#Modules">module</a> name(&hellip;) { &hellip; }<br/>
 				name();</code>
-				<code><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/User-Defined_Functions">function</a> name(&hellip;) = &hellip;<br/>
+				<code><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/User-Defined_Functions_and_Modules#Functions">function</a> name(&hellip;) = &hellip;<br/>
 				name();</code>
 				<code><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Include_Statement">include</a> &lt;&hellip;.scad&gt;</code>
 				<code><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Include_Statement">use</a> &lt;&hellip;.scad&gt;</code>
@@ -157,7 +157,7 @@
 				<code><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Other_Language_Features#Surface">surface</a>(file = "&hellip;.dat",center,convexity)</code>
 				<code><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Using_the_2D_Subsystem#3D_to_2D_Projection">projection</a>(cut)</code>
 				<code><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Other_Language_Features#Render">render</a>(convexity)</code>
-				<code><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Modules#children">children</a>([idx])</code>
+				<code><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/User-Defined_Functions_and_Modules#children">children</a>([idx])</code>
 			</article>
                 </section>
 		<section>
@@ -187,7 +187,7 @@
 					<dd>viewport translation</dd>
                                         <dt><code><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Other_Language_Features#.24vpr.2C_.24vpt_and_.24vpd">$vpd</a></code></dt>
 					<dd>viewport camera distance</dd>
-                                        <dt><code><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Modules#children">$children</a></code></dt>
+                                        <dt><code><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/User-Defined_Functions_and_Modules#children">$children</a></code></dt>
                                         <dd>&nbsp;number of module children</dd>
 				</dl>
 			</article>
