made header and columns of website responsive

--- a/downloads.html
+++ b/downloads.html
@@ -72,7 +72,7 @@
 <div id="page-wrap">
 <header>
 	<div class="clear"></div>
-	<div id="logo" class="left"></div>
+	<div id="logo" class="left"><img src="assets/img/logo.png"></div>
 	<div id="donate" class="right">
         <div id="paypal" style="margin-bottom:5px;">
           <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
@@ -82,7 +82,7 @@
             <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
           </form>
           </div>
-		<a class="FlattrButton" style="display:none;" rev="flattr" href="http://openscad.org"></a><br/>
+		<div><a class="FlattrButton" style="display:none;" rev="flattr" href="http://openscad.org"></a></div>
           <script src="http://coinwidget.com/widget/coin.js"></script>
           <script>
             CoinWidgetCom.go({
@@ -97,9 +97,9 @@
             });
           </script>
 	</div>
-	<div id="title" style="margin-top:35px; width:620px;">
+	<div id="title">
 		<h1 class="title" style="position:relative;"><span class="green">Open</span>SCAD</h1>
-		<h2 class="subtitle" style="position:relative; left:45px;">The Programmers Solid 3D CAD Modeller</h2>
+		<h2 class="subtitle" style="position:relative;">The Programmers Solid 3D CAD Modeller</h2>
 	</div>
 
 	<div id="navigation">
