Marked PPA as Ubuntu only
The PPA listed at line 196 is Ubuntu only; marked it as such.

--- a/downloads.html
+++ b/downloads.html
@@ -191,7 +191,8 @@
 				<pre>
 					<code>$ sudo apt-get install openscad</code>
 				</pre>
-                                <p>However, some distributions come with old versions of OpenSCAD. To update to the latest release add the following
+				<h3>For Ubuntu users:</h3>
+                                <p>To update to the latest release add the following
                                     <a href="https://launchpad.net/~openscad/+archive/ubuntu/releases">PPA</a> before installing OpenSCAD:</p>
 				<pre>
 					<code>$ sudo add-apt-repository ppa:openscad/releases</code>
