Removed direct mailing list signup form since mailman now uses a hash-protected form

--- a/community.html
+++ b/community.html
@@ -132,11 +132,11 @@
 		</section>
 	
 		<section id="mailing-list">
-		  <h1>Mailing List<small>
-                      <a href="http://lists.openscad.org/mailman/listinfo/discuss_lists.openscad.org">list info</a>
-                      <a href="http://lists.openscad.org/pipermail/discuss_lists.openscad.org/">archives</a></small></h1>
-		  <form action="http://lists.openscad.org/mailman/subscribe/discuss_lists.openscad.org" method="POST" target="_blank">E-mail: <input name="email" /><input type="submit" value="Sign Me Up!" />
-                  </form>
+		  <h1>Mailing List</h1>
+                  <ul>
+                    <li><a href="http://lists.openscad.org/mailman/listinfo/discuss_lists.openscad.org">list info</a></li>
+                    <li><a href="http://lists.openscad.org/pipermail/discuss_lists.openscad.org/">archives</a></li>
+                  </ul>
                   <br/>Note: The mailing list and <a href="#forum">forums</a> are bidirectionally connected.
 		</section>
 		
