--- a/downloads.html
+++ b/downloads.html
@@ -415,6 +415,11 @@
                                 <small><code>deb http://download.opensuse.org/repositories/home:/t-paul/xUbuntu_16.04/ ./</code></small>
                             </pre>
 
+                            <h3>Ubuntu 16.10</h3>
+                            <pre>
+                                <small><code>deb http://download.opensuse.org/repositories/home:/t-paul/xUbuntu_16.10/ ./</code></small>
+                            </pre>
+
                             <h2>openSUSE packages built on <a href="https://build.opensuse.org/">OpenSUSE build service</a></h2>
                             
                             <h3>openSUSE 13.1</h3>
