--- a/downloads.html
+++ b/downloads.html
@@ -374,8 +374,10 @@
                         
                             <p>To install the packages, the release key must be added with apt-key to the key-ring to allow
                                 apt-get / aptitude to validate the packages.<br/>
-                                Key ID: 30EB8E08 (valid till 2016-11-28)<br/>
+                                Key ID: 75F3214F30EB8E08 (valid till 2019-02-07)<br/>
                                 Key UID: home:t-paul OBS Project &lt;home:t-paul@build.opensuse.org&gt;</p>
+
+			    <p>NOTE: If you get errors about an expired key valid till 2016-11-28, please re-import via the following command.</p>
 
                             <pre>
                                 <small><code># wget -qO - http://files.openscad.org/OBS-Repository-Key.pub | sudo apt-key add -</code></small>
