adding brew install section

--- a/downloads.html
+++ b/downloads.html
@@ -146,9 +146,15 @@
 				</a>
 			</div>
 			<div class="subsection">
-				<p>OpenSCAD is also available on <a href="http://www.macports.org/" target="_blank">MacPorts</a>:</p>
+				<p>OpenSCAD is available on <a href="http://www.macports.org/" target="_blank">MacPorts</a>:</p>
 				<pre>
 					<code>$ sudo port install openscad</code>
+				</pre>
+			</div>
+			<div class="subsection">
+				<p>OpenSCAD is also available on <a href="http://brew.sh/" target="_blank">Homebrew</a>:</p>
+				<pre>
+					<code>$ brew install Caskroom/cask/openscad</code>
 				</pre>
 			</div>
 		</section>
