I'm not the best english expert but
I think it shouldn't have the 'a'

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 	<article>
 
 		<section>
-			<h1><strong><span class="green">Open</span>SCAD</strong> is a software for creating solid 3D CAD objects.</h1>
+			<h1><strong><span class="green">Open</span>SCAD</strong> is software for creating solid 3D CAD objects.</h1>
 			<h1 class="normal">It is free software and available for Linux/UNIX, MS Windows and Mac OS X.</h1>
 
 			<img src="assets/img/screenshot.png"/>
