Add Ubuntu 17.10 and Debian Testing repository links.

--- a/downloads.html
+++ b/downloads.html
@@ -397,6 +397,11 @@
                                 <small><code>deb http://download.opensuse.org/repositories/home:/t-paul/Debian_9.0/ ./</code></small>
                             </pre>
 
+                            <h3>Debian Testing</h3>
+                            <pre>
+                                <small><code>deb http://download.opensuse.org/repositories/home:/t-paul/Debian_Testing_standard/ ./</code></small>
+                            </pre>
+
                             <h3>Ubuntu 16.04</h3>
                             <pre>
                                 <small><code>deb http://download.opensuse.org/repositories/home:/t-paul/xUbuntu_16.04/ ./</code></small>
@@ -410,6 +415,11 @@
                             <h3>Ubuntu 17.04</h3>
                             <pre>
                                 <small><code>deb http://download.opensuse.org/repositories/home:/t-paul/xUbuntu_17.04/ ./</code></small>
+                            </pre>
+
+                            <h3>Ubuntu 17.10</h3>
+                            <pre>
+                                <small><code>deb http://download.opensuse.org/repositories/home:/t-paul/xUbuntu_17.10/ ./</code></small>
                             </pre>
 
                             <h2>openSUSE packages built on <a href="https://build.opensuse.org/">OpenSUSE build service</a></h2>
