--- a/downloads.html
+++ b/downloads.html
@@ -349,7 +349,7 @@
                                 <p>Please try the automatically built snapshots first if you are running a supported distribution 
                                    (see <a href="#snapshots-linux-auto">below</a>), the following AppImage builds are still
                                    experimental.</p>
-				<p style="color: red;"><b>AppImages are currently not available due to some changes on OBS, hopefully that
+				<p style="color: red;"><b>ARM AppImages are currently not available due to some changes on OBS, hopefully that
 				   will soon be resolved...</b></p>
                                 
 				<table>
