Temporarily disable AppImages until builds work again.

--- a/downloads.html
+++ b/downloads.html
@@ -349,6 +349,11 @@
 			</div>
 
 			<div id="snapshots-linux" class="subsection">
+<!--
+  need fixes
+  - https://github.com/probonopd/linuxdeployqt/issues/273
+  - https://github.com/probonopd/linuxdeployqt/issues/274
+  and maybe some updates on OBS
 			    <h2>Linux - AppImage</h2>
                             <p>Please try the automatically built snapshots first if you are running a supported
 				distribution (see <a href="#snapshots-linux-distro">below</a>), the following
@@ -363,6 +368,7 @@
 				    <small>x64 (64-bit) - </small><small id="LIN64_SNAPSHOT_SIZE">?? MB</small>
 				</button>
 			    </a></p>
+-->
 
 			    <h2><a id="snapshots-linux-distro">Linux - Distribution Packages</a></h2>
                             <p>The packages are automatically built based on the <a href="https://github.com/openscad/openscad/tree/master">master branch</a>
