Disable ancient Linux download links.

--- a/downloads.html
+++ b/downloads.html
@@ -221,6 +221,7 @@
 					<code># pacman -S openscad</code>
 				</pre>
 			</div>
+<!-- disabled, needs to be replaced with AppImage maybe
 			<div id="other-linux" class="subsection">
 				<h2>Other Linux</h2>
 				<p>The following generic binary Linux packages are available:</p>
@@ -237,6 +238,7 @@
 				</button>
 				</a>
 			</div>
+-->
 		</section>
 
 		<section id="bsd">
