Link to AppImage of the release version (only x64 available right now).

--- a/downloads.html
+++ b/downloads.html
@@ -221,24 +221,16 @@
 					<code># pacman -S openscad</code>
 				</pre>
 			</div>
-<!-- disabled, needs to be replaced with AppImage maybe
 			<div id="other-linux" class="subsection">
 				<h2>Other Linux</h2>
-				<p>The following generic binary Linux packages are available:</p>
-				<a id="LIN32_RELEASE_URL" href="http://files.openscad.org">
-				<button class="left, download-button">
-					<h3 id="LIN32_RELEASE_NAME">OpenSCAD</h3>
-					<small>x86 (32-bit) - tgz archive - </small><small id="LIN32_RELEASE_SIZE">?? MB</small>
-				</button>
-				</a>
+				<p>The AppImage package is intended to run on any recent Linux distribution. For more information about how AppImages work, see the <a href="https://appimage.org/">AppImage WebSite</a>.</p>
 				<a id="LIN64_RELEASE_URL" href="http://files.openscad.org">
 				<button class="download-button">
 					<h3 id="LIN64_RELEASE_NAME">OpenSCAD</h3>
-					<small>x64 (64-bit) - tgz archive -</small><small id="LIN64_RELEASE_SIZE">?? MB</small>
+					<small>x64 (64-bit) - AppImage -</small><small id="LIN64_RELEASE_SIZE">?? MB</small>
 				</button>
 				</a>
 			</div>
--->
 		</section>
 
 		<section id="bsd">
