change to https for wikibooks.org
change links to https to enforce security

--- a/cheatsheet/snapshot.html
+++ b/cheatsheet/snapshot.html
@@ -46,7 +46,7 @@
 				<code><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Using_the_2D_Subsystem#square">square</a>([width,height],center)</code>
 				<code><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Using_the_2D_Subsystem#polygon">polygon</a>([points])</code>
 				<code><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Using_the_2D_Subsystem#polygon">polygon</a>([points],[paths])</code>
-				<code><a href="http://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Text">text</a>(t, size, font,<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;halign, valign, spacing,<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;direction, language, script)</code>
+				<code><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Text">text</a>(t, size, font,<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;halign, valign, spacing,<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;direction, language, script)</code>
 			</article>
 			<article>
 				<h2>3D</h2>
@@ -202,7 +202,7 @@
 					<a href="http://www.openscad.org/" target="_blank">Official website</a>
 					| <a href="https://github.com/openscad/openscad" target="_blank">Code</a>
                                         | <a href="https://github.com/openscad/openscad/issues" target="_blank">Issues</a>
-					| <a href="http://en.wikibooks.org/wiki/OpenSCAD_User_Manual" target="_blank">Manual</a>
+					| <a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual" target="_blank">Manual</a>
 					| <a href="https://github.com/openscad/MCAD" target="_blank">MCAD library</a>
                     | <a href="http://forum.openscad.org" target="_blank">Forum</a>
 					| <a href="http://fablabamersfoort.nl/book/openscad" target="_blank">Other links</a>
