--- a/community.html
+++ b/community.html
@@ -108,7 +108,7 @@
 			<ul>
 				<li>subscribe to the <a href="#mailing-list">mailing list</a> or <a href="#forum">forums</a> or join our <a href="#irc">IRC channel</a> and contribute to the user community by answering requests and take part in discussions</li>
 				<li>Report bugs, improve or validate bug reports on the <a href="https://github.com/openscad/openscad/issues">github issue tracker</a></li>
-				<li>Improve the <a href="http://en.wikibooks.org/wiki/OpenSCAD_User_Manual">documentation</a> (it's a wiki)</li>
+				<li>Improve the <a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual">documentation</a> (it's a wiki)</li>
 			</ul>
 			<h2>Web developers</h2>
 			<ul>
