--- a/news.html
+++ b/news.html
@@ -417,14 +417,14 @@
                       <li>Recursive use of modules is now supported (including cascading child() operations), see <a href="https://github.com/openscad/openscad/blob/master/examples/example024.scad">example024</a><br/></li>
                       <li>Parameter list values can now depend on earlier values: <code>for (i=[0:2], j=[0:i])</code></li>
                       <li>value assignments in parameters can now depend on already declared parameters</li>
-                      <li>Added <a href="http://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Transformations#resize">resize()</a> module</li>
+                      <li>Added <a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Transformations#resize">resize()</a> module</li>
                     </ul>
                     <h3>Program Features</h3>
                     <ul>
                       <li>Added basic syntax highlighting in the editor</li>
-                      <li>There is now a <a href="http://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Libraries#Library_Locations">built-in library path</a> in user-space</li>
+                      <li>There is now a <a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Libraries#Library_Locations">built-in library path</a> in user-space</li>
                       <li>Commandline output to PNG, with various camera and rendering settings.<br/>        
-                        Run <code>openscad -h</code> to see usage info or see the <a href="http://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Using_OpenSCAD_in_a_command_line_environment">user manual</a></li>
+                        Run <code>openscad -h</code> to see usage info or see the <a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Using_OpenSCAD_in_a_command_line_environment">user manual</a></li>
                       <li>Attempting to open or drag&amp;drop dxf, off or stl files in the GUI will now create an import statement.</li>
                       <li>The preview operator (%) will now preserve any manually set color</li>
                       <li>The highlight operator (#) will now color the object in transparent red</li>
