--- a/downloads.html
+++ b/downloads.html
@@ -187,7 +187,8 @@
 			<h1>Linux</h1>
 			<div id="ubuntu" class="subsection">
 				<h2>Debian / Ubuntu / Kubuntu</h2>
-				<p>OpenSCAD is available in the repositories of recent distributions.
+				<p>OpenSCAD is available in the repositories of most recent distributions
+				   (Currently <a href="https://bugs.launchpad.net/ubuntu/+source/openscad/+bug/1766555">missing</a> in Ubuntu 18.04).
 				<pre>
 					<code>$ sudo apt-get install openscad</code>
 				</pre>
