--- a/downloads.html
+++ b/downloads.html
@@ -358,6 +358,15 @@
 				</button>
 			    </a></p>
 
+			    <h2>Linux - Snap</h2>
+                            <p>Snap packages are available, as those are built against an older Ubuntu (16.04)
+				those are using some older components which can cause known display issues, so
+				if possible use one of the specific distribution packages below.</p>
+			    <p>Install with</p>
+                            <pre>
+                                <small><code># snap install openscad-nightly</code></small>
+                            </pre>
+
 			    <h2><a id="snapshots-linux-distro">Linux - Distribution Packages</a></h2>
                             <p>The packages are automatically built based on the <a href="https://github.com/openscad/openscad/tree/master">master branch</a>
                                 on github.</p>
