Add link to snapcraft.io.

--- a/downloads.html
+++ b/downloads.html
@@ -359,9 +359,10 @@
 			    </a></p>
 
 			    <h2>Linux - Snap</h2>
-                            <p>Snap packages are available, as those are built against an older Ubuntu (16.04)
-				those are using some older components which can cause known display issues, so
-				if possible use one of the specific distribution packages below.</p>
+                            <p><a href="https://snapcraft.io/openscad-nightly">Snap packages</a> are available,
+				as those are built against an older Ubuntu (16.04) those are using some older
+				components which can cause known display issues, so if possible use one of the
+				specific distribution packages below.</p>
 			    <p>Install with</p>
                             <pre>
                                 <small><code># snap install openscad-nightly</code></small>
