self host external coinwidget.com
- project coinwidget.com  has last update 5 years ago
- to avoid hijack by self hosting
- disable qrcode, throws 404 from conwidget.com, php script to generate
qrcode not possible on github hosting

resolve #57

--- a/index.html
+++ b/index.html
@@ -59,14 +59,14 @@
           </form>
           </div>
 	  <a class="FlattrButton" style="display:none;" rev="flattr" href="http://openscad.org"></a><br/>
-          <script src="http://coinwidget.com/widget/coin.js"></script>
+          <script src="assets/widget_coin/coin.js"></script>
           <script>
             CoinWidgetCom.go({
 	    wallet_address: "18Eakg4ZCjjfVajXGvyntLKsEJYvZuT49C"
 	    , currency: "bitcoin"
 	    , counter: "count"
 	    , alignment: "bl"
-	    , qrcode: true
+	    , qrcode: false
 	    , auto_show: false
 	    , lbl_button: "Donate"
 	    , lbl_address: "Bitcoin Address:"
