--- a/downloads.html
+++ b/downloads.html
@@ -462,6 +462,11 @@
                                 <small><code>https://download.opensuse.org/repositories/home:/t-paul/Fedora_27/</code></small>
                             </pre>
                             
+                            <h3>Fedora 28 (64-bit only)</h3>
+                            <pre>
+                                <small><code>https://download.opensuse.org/repositories/home:/t-paul/Fedora_28/</code></small>
+                            </pre>
+
                             <h3>Fedora Rawhide</h3>
                             <pre>
                                 <small><code>https://download.opensuse.org/repositories/home:/t-paul/Fedora_Rawhide/</code></small>
