--- a/cheatsheet/snapshot.html
+++ b/cheatsheet/snapshot.html
@@ -205,6 +205,8 @@
 					<dd>viewport camera distance</dd>
                                         <dt><code><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/User-Defined_Functions_and_Modules#children">$children</a></code></dt>
                                         <dd>&nbsp;number of module children</dd>
+                                        <dt><code><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Other_Language_Features#$preview">$preview</a></code></dt>
+                                        <dd>&nbsp;true in F5 preview, false for F6</dd>
 				</dl>
 			</article>
 		</section>
