Shorter $preview description

--- a/cheatsheet/index.html
+++ b/cheatsheet/index.html
@@ -190,7 +190,7 @@
                                         <dt><code><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/User-Defined_Functions_and_Modules#children">$children</a></code></dt>
                                         <dd>&nbsp;number of module children</dd>
                                         <dt><code><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Other_Language_Features#$preview">$preview</a></code></dt>
-                                        <dd>&nbsp;true during F5 preview, false for F6</dd>
+                                        <dd>&nbsp;true in F5 preview, false for F6</dd>
 				</dl>
 			</article>
 		</section>
