--- a/downloads.html
+++ b/downloads.html
@@ -224,12 +224,13 @@
 			<div id="other-linux" class="subsection">
 				<h2>Other Linux</h2>
 				<p>The AppImage package is intended to run on any recent Linux distribution. For more information about how AppImages work, see the <a href="https://appimage.org/">AppImage WebSite</a>.</p>
-				<a id="LIN64_RELEASE_URL" href="http://files.openscad.org">
+				<p style="color: red;">AppImage is currently not available due to <a href="https://github.com/openscad/openscad/issues/2463">build issues</a> on OBS</p>
+				<!--<a id="LIN64_RELEASE_URL" href="http://files.openscad.org">-->
 				<button class="download-button">
 					<h3 id="LIN64_RELEASE_NAME">OpenSCAD</h3>
 					<small>x64 (64-bit) - AppImage -</small><small id="LIN64_RELEASE_SIZE">?? MB</small>
 				</button>
-				</a>
+				<!--</a>-->
 			</div>
 		</section>
 
@@ -347,16 +348,17 @@
                             <p>Please try the automatically built snapshots first if you are running a supported
 				distribution (see <a href="#snapshots-linux-distro">below</a>), the following
 				AppImage builds are still experimental.</p>
+			    <p style="color: red;">AppImage is currently not available due to <a href="https://github.com/openscad/openscad/issues/2463">build issues</a> on OBS</p>
 
-			    <p>Right now only the Intel/64-bit AppImage build is working, we'd like to provide
+			    <!--<p>Right now only the Intel/64-bit AppImage build is working, we'd like to provide
 				the Intel/32-bit and ARM 32/64-bit builds, but there are currently some issues
 				with the OBS builds that need investigation.</p>
-			    <p><a id="LIN64_SNAPSHOT_URL" href="http://files.openscad.org">
+			    <p><a id="LIN64_SNAPSHOT_URL" href="http://files.openscad.org">-->
 				<button class="download-button">
 				    <h3 id="LIN64_SNAPSHOT_NAME">OpenSCAD</h3>
 				    <small>x64 (64-bit) - </small><small id="LIN64_SNAPSHOT_SIZE">?? MB</small>
 				</button>
-			    </a></p>
+			    <!--</a></p>-->
 
 			    <h2>Linux - Snap</h2>
                             <p><a href="https://snapcraft.io/openscad-nightly">Snap packages</a> are available,
