--- a/cheatsheet/snapshot.html
+++ b/cheatsheet/snapshot.html
@@ -25,7 +25,7 @@
 <body>
 	<header>
 		<h1>OpenSCAD CheatSheet</h1>
-		<h2>v2016.XX</h2>
+		<h2>(<a href="http://www.openscad.org/downloads.html#snapshots">dev snapshot</a>)</h2>
 	</header>
 	<section>
 		<section>
